--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <body>
     <h1 class="text-center display-1">Sakktábla</h1>
     <div class="d-flex justify-content-center container-fluid">
-        <table>
+        <table class="text-center">
             <tr class="elso">
                 <td>1</td>
                 <td>2</td>
