--- a/index.html
+++ b/index.html
@@ -1,97 +1,122 @@
 <!DOCTYPE html>
 <html lang="hu">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Pszeudo osztályos feladat</title>
     <link rel="stylesheet" href="css/style.css">
+    <style></style>
 </head>
+
 <body>
     <h1>Sakktábla</h1>
     <div>
-        <table>
-            <tr>
-                <td>&nbsp;</td>
-                <td>&nbsp;</td>
-                <td>&nbsp;</td>
-                <td>&nbsp;</td>
-                <td>&nbsp;</td>
-                <td>&nbsp;</td>
-                <td>&nbsp;</td>
-                <td>&nbsp;</td>
-            </tr>
-            <tr>
-                <td>&nbsp;</td>
-                <td>&nbsp;</td>
-                <td>&nbsp;</td>
-                <td>&nbsp;</td>
-                <td>&nbsp;</td>
-                <td>&nbsp;</td>
-                <td>&nbsp;</td>
-                <td>&nbsp;</td>
-            </tr>
-            <tr>
-                <td>&nbsp;</td>
-                <td>&nbsp;</td>
-                <td>&nbsp;</td>
-                <td>&nbsp;</td>
-                <td>&nbsp;</td>
-                <td>&nbsp;</td>
-                <td>&nbsp;</td>
-                <td>&nbsp;</td>
-            </tr>
-            <tr>
-                <td>&nbsp;</td>
-                <td>&nbsp;</td>
-                <td>&nbsp;</td>
-                <td>&nbsp;</td>
-                <td>&nbsp;</td>
-                <td>&nbsp;</td>
-                <td>&nbsp;</td>
-                <td>&nbsp;</td>
-            </tr>
-            <tr>
-                <td>&nbsp;</td>
-                <td>&nbsp;</td>
-                <td>&nbsp;</td>
-                <td>&nbsp;</td>
-                <td>&nbsp;</td>
-                <td>&nbsp;</td>
-                <td>&nbsp;</td>
-                <td>&nbsp;</td>
-            </tr>
-            <tr>
-                <td>&nbsp;</td>
-                <td>&nbsp;</td>
-                <td>&nbsp;</td>
-                <td>&nbsp;</td>
-                <td>&nbsp;</td>
-                <td>&nbsp;</td>
-                <td>&nbsp;</td>
-                <td>&nbsp;</td>
-            </tr>
-            <tr>
-                <td>&nbsp;</td>
-                <td>&nbsp;</td>
-                <td>&nbsp;</td>
-                <td>&nbsp;</td>
-                <td>&nbsp;</td>
-                <td>&nbsp;</td>
-                <td>&nbsp;</td>
-                <td>&nbsp;</td>
-            </tr>
-            <tr>
-                <td>&nbsp;</td>
-                <td>&nbsp;</td>
-                <td>&nbsp;</td>
-                <td>&nbsp;</td>
-                <td>&nbsp;</td>
-                <td>&nbsp;</td>
-                <td>&nbsp;</td>
-                <td>&nbsp;</td>
-            </tr>
+        <table class="sakkTabla">
+            <tbody>
+                <tr>
+                    <th></th>
+                    <th>a</th>
+                    <th>b</th>
+                    <th>c</th>
+                    <th>d</th>
+                    <th>e</th>
+                    <th>f</th>
+                    <th>g</th>
+                    <th>h</th>
+                </tr>
+                <tr>
+                    <th>8</th>
+                    <td class="feher"></td>
+                    <td class="fekete"></td>
+                    <td class="feher"></td>
+                    <td class="fekete"></td>
+                    <td class="feher"></td>
+                    <td class="fekete"></td>
+                    <td class="feher"></td>
+                    <td class="fekete"></td>
+                </tr>
+                <tr>
+                    <th>7</th>
+                    <td class="feher"></td>
+                    <td class="fekete"></td>
+                    <td class="feher"></td>
+                    <td class="fekete"></td>
+                    <td class="feher"></td>
+                    <td class="fekete"></td>
+                    <td class="feher"></td>
+                    <td class="fekete"></td>
+                </tr>
+                <tr>
+                    <th>6</th>
+                    <td class="feher"></td>
+                    <td class="fekete"></td>
+                    <td class="feher"></td>
+                    <td class="fekete"></td>
+                    <td class="feher"></td>
+                    <td class="fekete"></td>
+                    <td class="feher"></td>
+                    <td class="fekete"></td>
+                </tr>
+                <tr>
+                    <th>5</th>
+                    <td class="feher"></td>
+                    <td class="fekete"></td>
+                    <td class="feher"></td>
+                    <td class="fekete"></td>
+                    <td class="feher"></td>
+                    <td class="fekete"></td>
+                    <td class="feher"></td>
+                    <td class="fekete"></td>
+                </tr>
+                <tr>
+                    <th>4</th>
+                    <td class="feher"></td>
+                    <td class="fekete"></td>
+                    <td class="feher"></td>
+                    <td class="fekete"></td>
+                    <td class="feher"></td>
+                    <td class="fekete"></td>
+                    <td class="feher"></td>
+                    <td class="fekete"></td>
+                </tr>
+                <tr>
+                    <th>3</th>
+                    <td class="feher"></td>
+                    <td class="fekete"></td>
+                    <td class="feher"></td>
+                    <td class="fekete"></td>
+                    <td class="feher"></td>
+                    <td class="fekete"></td>
+                    <td class="feher"></td>
+                    <td class="fekete"></td>
+                </tr>
+                <tr>
+                    <th>2</th>
+                    <td class="feher"></td>
+                    <td class="fekete"></td>
+                    <td class="feher"></td>
+                    <td class="fekete"></td>
+                    <td class="feher"></td>
+                    <td class="fekete"></td>
+                    <td class="feher"></td>
+                    <td class="fekete"></td>
+                </tr>
+                <tr>
+                    <th>1</th>
+                    <td class="feher"></td>
+                    <td class="fekete"></td>
+                    <td class="feher"></td>
+                    <td class="fekete"></td>
+                    <td class="feher"></td>
+                    <td class="fekete"></td>
+                    <td class="feher"></td>
+                    <td class="fekete"></td>
+                </tr>
+            </tbody>
         </table>
     </div>
 </body>
+
 </html>
