--- a/index.html
+++ b/index.html
@@ -11,9 +11,10 @@
 </head>
 
 <body>
-    <h1>Sakktábla</h1>
+
     <div>
-        <table class="sakkTabla">
+        <h1 class="kozep">Sakktábla</h1>
+        <table class="sakkTabla kozep">
             <tbody>
                 <tr>
                     <th></th>
@@ -27,7 +28,7 @@
                     <th>h</th>
                 </tr>
                 <tr>
-                    <th>8</th>
+                    <th>1</th>
                     <td class="feher"></td>
                     <td class="fekete"></td>
                     <td class="feher"></td>
@@ -38,8 +39,7 @@
                     <td class="fekete"></td>
                 </tr>
                 <tr>
-                    <th>7</th>
-                    <td class="feher"></td>
+                    <th>2</th>
                     <td class="fekete"></td>
                     <td class="feher"></td>
                     <td class="fekete"></td>
@@ -47,39 +47,7 @@
                     <td class="fekete"></td>
                     <td class="feher"></td>
                     <td class="fekete"></td>
-                </tr>
-                <tr>
-                    <th>6</th>
                     <td class="feher"></td>
-                    <td class="fekete"></td>
-                    <td class="feher"></td>
-                    <td class="fekete"></td>
-                    <td class="feher"></td>
-                    <td class="fekete"></td>
-                    <td class="feher"></td>
-                    <td class="fekete"></td>
-                </tr>
-                <tr>
-                    <th>5</th>
-                    <td class="feher"></td>
-                    <td class="fekete"></td>
-                    <td class="feher"></td>
-                    <td class="fekete"></td>
-                    <td class="feher"></td>
-                    <td class="fekete"></td>
-                    <td class="feher"></td>
-                    <td class="fekete"></td>
-                </tr>
-                <tr>
-                    <th>4</th>
-                    <td class="feher"></td>
-                    <td class="fekete"></td>
-                    <td class="feher"></td>
-                    <td class="fekete"></td>
-                    <td class="feher"></td>
-                    <td class="fekete"></td>
-                    <td class="feher"></td>
-                    <td class="fekete"></td>
                 </tr>
                 <tr>
                     <th>3</th>
@@ -93,7 +61,18 @@
                     <td class="fekete"></td>
                 </tr>
                 <tr>
-                    <th>2</th>
+                    <th>4</th>
+                    <td class="fekete"></td>
+                    <td class="feher"></td>
+                    <td class="fekete"></td>
+                    <td class="feher"></td>
+                    <td class="fekete"></td>
+                    <td class="feher"></td>
+                    <td class="fekete"></td>
+                    <td class="feher"></td>
+                </tr>
+                <tr>
+                    <th>5</th>
                     <td class="feher"></td>
                     <td class="fekete"></td>
                     <td class="feher"></td>
@@ -104,7 +83,18 @@
                     <td class="fekete"></td>
                 </tr>
                 <tr>
-                    <th>1</th>
+                    <th>6</th>
+                    <td class="fekete"></td>
+                    <td class="feher"></td>
+                    <td class="fekete"></td>
+                    <td class="feher"></td>
+                    <td class="fekete"></td>
+                    <td class="feher"></td>
+                    <td class="fekete"></td>
+                    <td class="feher"></td>
+                </tr>
+                <tr>
+                    <th>7</th>
                     <td class="feher"></td>
                     <td class="fekete"></td>
                     <td class="feher"></td>
@@ -113,6 +103,17 @@
                     <td class="fekete"></td>
                     <td class="feher"></td>
                     <td class="fekete"></td>
+                </tr>
+                <tr>
+                    <th>8</th>
+                    <td class="fekete"></td>
+                    <td class="feher"></td>
+                    <td class="fekete"></td>
+                    <td class="feher"></td>
+                    <td class="fekete"></td>
+                    <td class="feher"></td>
+                    <td class="fekete"></td>
+                    <td class="feher"></td>
                 </tr>
             </tbody>
         </table>
